--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,7 +1,7 @@
-<!-- <ion-header>
+<ion-header>
     <ion-navbar color="primary">
       <ion-title>
-        Login
+        Criar conta
       </ion-title>
     </ion-navbar>
   </ion-header>
@@ -26,7 +26,7 @@
           O campo é obrigatório
         </ion-item>
     </ion-list>
-    <button ion-button type="submit" [disabled]="!form.form.valid" block>Login</button>
+    <button ion-button type="submit" [disabled]="!form.form.valid" block (click)="createAccount()">Login</button>
   </form>
 </ion-content>
- -->
+
