--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -1,10 +1,11 @@
-<!-- <ion-header>
+<ion-header>
     <ion-navbar color="primary">
       <ion-title>
         Login
       </ion-title>
     </ion-navbar>
   </ion-header>
+
 <ion-content padding>
   
   <form #form="ngForm" novalidate>
@@ -27,6 +28,7 @@
         </ion-item>
     </ion-list>
     <button ion-button type="submit" [disabled]="!form.form.valid" block>Login</button>
+    <button ion-button full outline>Esqueci minha senha</button>
+    <button ion-button full outline (click)="novoUsuario()" >Criar conta</button> 
   </form>
-</ion-content>
- -->
+</ion-content> 
