--- a/src/pages/resetpassword/resetpassword.html
+++ b/src/pages/resetpassword/resetpassword.html
@@ -6,13 +6,28 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>resetpassword</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Esqueci minha senha!</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <form #form="ngForm" novalidate>
+    <ion-list>
+      <ion-item>
+        <ion-label stacked>Email</ion-label>
+        <ion-input type="text" class="form-control" placeholder="Entre com o email" 
+        [(ngModel)]="user.email" name="email" required #email="ngModel">></ion-input>
+      </ion-item>
+      <ion-item *ngIf='email.errors && (email.dirty || email.touched)' class="text-danger">
+        O campo é obrigatório
+      </ion-item>            
+    </ion-list>
 
+    <button ion-button type="submit" [disabled]="!form.form.valid" block (click)="esqueciMinhaSenha()">Redefinir senha</button>
+    <!-- <button ion-button full outline>Esqueci minha senha</button>
+    <button ion-button full outline>Criar conta</button> -->
+  </form>
 </ion-content>
