--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -26,7 +26,7 @@
         O campo é obrigatório
       </ion-item>
   </ion-list>
-  <button ion-button type="submit" [disabled]="!form.form.valid" block (click)="salve()">Salve</button>
+  <button ion-button type="submit" [disabled]="!form.form.valid" block (click)="salvar()">Salvar</button>
 </form>
 </ion-content>
 
