--- a/src/pages/resumo/resumo.html
+++ b/src/pages/resumo/resumo.html
@@ -4,16 +4,16 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title>resumo</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
-<ion-content padding>
+<!-- <ion-content padding> -->
   <div *ngIf="carregado">
     <ion-card>
         <ion-card-header>
@@ -45,4 +45,4 @@
 
     </ion-card>
   </div>
-</ion-content>
+<!-- </ion-content> -->
