--- a/src/pages/inicial/inicial.html
+++ b/src/pages/inicial/inicial.html
@@ -1,8 +1,13 @@
 <ion-content>
-      <ion-row class="principal">
+        <ion-row class="principal">
           <ion-col align-self-center>
             <!-- <img src="../assets/imgs/brazao_Camara.svg"> -->
           </ion-col>
+        </ion-row>
+        <ion-row class="tituloInicial">
+            <ion-col align-self-center>
+              Portal do Servidor
+            </ion-col>
         </ion-row>
         <ion-row>
             <ion-col >
