--- a/src/pages/inicial/inicial.html
+++ b/src/pages/inicial/inicial.html
@@ -1,17 +1,22 @@
-<ion-content>
-        <ion-row class="principal">
-          <ion-col align-self-center>
-            <!-- <img src="../assets/imgs/brazao_Camara.svg"> -->
-          </ion-col>
-        </ion-row>
-        <ion-row class="tituloInicial">
-            <ion-col align-self-center>
-              Portal do Servidor
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col >
-                <button ion-button type="submit" block (click)="login()">Login</button>
-            </ion-col>
+
+  <ion-content class="conteudo">
+    <div class="principal">      
+          <ion-row class="linha1">
+          
           </ion-row>
-</ion-content>
+          <ion-row class="linha2">
+              <h5 class="textoLinha2">Teste</h5>
+          </ion-row>
+    </div> 
+    <div class="rodape">
+          <ion-row class="linha3"> 
+            <ion-col class="colunaBotao">
+                <a class="botao">Entrar</a>
+                <!-- <button ion-button type="submit" block (click)="login()">Login</button> -->
+            </ion-col>
+            <ion-col class="colunaBotao">
+                <a class="botao">Cadastrar</a>
+            </ion-col>
+        </ion-row> 
+    </div>
+  </ion-content>
