--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,6 +10,15 @@
 <form #form="ngForm" novalidate>
   <ion-list>
     <ion-item>
+      <ion-avatar item-start>
+        <img src="{{ perfil.url }}" alt="">
+      </ion-avatar>
+    </ion-item>
+    <ion-item>
+       <img src="{{ imgPath }}" alt="Imagem do Perfil">
+       <button ion-button block color="dark" (click)="escolherFoto()">EscolherFoto</button>
+    </ion-item>
+    <ion-item>
       <ion-label stacked>Apelido</ion-label>
       <ion-input type="text" class="form-control"
       [(ngModel)]="perfil.apelido" name="apelido" required #apelido="ngModel">></ion-input>
