foto camera ou galeria

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -17,9 +17,9 @@
     <ion-item>
       <div *ngIf="imgPath !=''">
       <img src="{{ imgPath }}" alt="Imagem do Perfil">
-      </div> 
-       <button ion-button block color="dark" (click)="escolherFoto()">EscolherFoto</button>
-      
+      </div>
+       <button ion-button block color="dark" (click)="alterarFoto()">EscolherFoto</button>
+
     </ion-item>
     <ion-item>
       <ion-label stacked>Apelido</ion-label>
