--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,11 +19,9 @@
   </ion-header>
 
     <ion-content padding class="has-header">
-
+            <contrato-selecionado [perfil]="perfilObservable" (click)="mudarMatricula()"></contrato-selecionado>
             <dados-pessoais [perfil]="perfilObservable"></dados-pessoais>
             <resumo-pagamento [userId]="userIdObservable"></resumo-pagamento>
-            
-
     </ion-content>
 
     <!-- fonte dos botões
