--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -35,7 +35,7 @@
                 <br>
             </ion-col>
         </button>
-        <button outline ion-row center (click)="pagamentos()">
+        <button outline ion-row center>
             <ion-col>
                 <ion-icon name="logo-usd"></ion-icon>
                 <br> Cedula C
